--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -12,7 +12,7 @@
     </head>
     <body>
         {% include 'navbar.html.twig' %}
-        {% block central %}{% endblock %}
+        {% block body %}{% endblock %}
     </body>
 </html>
 
