velvet liste, details, ajout

--- a/symfony/templates/accueil/accueil.html copy.twig
+++ b/symfony/templates/accueil/accueil.html copy.twig
@@ -7,9 +7,6 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-12 text-end">
-            <a href="/ajout" class="btn btn-primary">Ajouter</a>
-        </div>
 
         {% for disc in discs %}    
             <div class="col-12 col-sm-6 col-md-4 mb-3">
@@ -19,7 +16,7 @@
                         <h5 class="card-title">{{ disc.title }}</h5>
                         <p class="card-text"></p>
                         <a href="/details/{{ disc.id }}" class="btn btn-primary">Détails</a>
-                        <a href="{{ path('app_details', { disc: disc.id }) }}" class="btn btn-primary">Détails</a>
+                        <a href="{{ path('app_details', { id: disc.id }) }}" class="btn btn-primary">Détails</a>
                     </div>
                 </div>
             </div>
