--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -12,6 +12,13 @@
     </head>
     <body>
         {% include 'navbar.html.twig' %}
+
+        {% for message in app.flashes('notice') %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
+
         {% block body %}{% endblock %}
     </body>
 </html>
