--- a/symfony/templates/navbar.html.twig
+++ b/symfony/templates/navbar.html.twig
@@ -19,7 +19,7 @@
                     
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link " href="/inscription" aria-disabled="true">Inscription</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
